--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -4,6 +4,7 @@
     ul{
         height: 30px;
         margin: 5px 0 60px 0;
+        padding-left: 0;
         list-style: none;
         li{
             float: left;
@@ -24,8 +25,10 @@
         }
     }
     .hp-box-left{
+        float: left;
         display: inline-block;
         clear: both;
+        margin-left: 100px;
         .hp-recommend{
             .hpr-box{
                 width: 570px;
@@ -55,13 +58,19 @@
                 height: 340px;
                 margin-bottom: 20px;
                 background-color: #eee;
-                .btn_loadFile{
-                    position: relative;
-                    top: 150px;
-                    left: 125px;
-                    padding: 11px 36px;
-                    font-size: 16px;
-                    border-radius: 2px;
+                #preview{
+                    max-width: 400px;
+                    max-height: 340px;
+                }
+                .btn_up{
+                    .btn_loadFile{
+                        position: absolute;
+                        width: 150px;
+                        height: 42px;
+                        top: 150px;
+                        left: 125px;
+                        font-size: 16px;
+                    }
                 }
                 #loadFile{
                     position: absolute;
@@ -71,27 +80,33 @@
                     height: 42px;
                     cursor: pointer;
                     opacity: 0;
+                    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
                 }
                 em{
+                    position: absolute;
                     display: block;
-                    margin: 150px 0 0 35px;
+                    top: 212px;
+                    left: 35px;
                     font-style: normal;
                     font-family: "Microsoft YaHei";
                     font-size: 16px;
                     color: #e74c3c;
                 }
                 span{
-                    margin: 0 0 0 35px;
+                    position: absolute;
+                    top: 240px;
+                    left: 35px;
                     font-family: "SimSun";
                     font-size: 12px;
                     color: #666;
                 }
             }
         }
-        .btn_blue{
-            padding: 9px 35px;
-            font-size: 14px;
-            border-radius: 2px;
+        .btn-info{
+            margin-bottom: 20px;
+            width: 100px;
+            height: 35px;
+            font-size: 14px; 
         }
     }
     .hp-box-right{
@@ -99,6 +114,7 @@
         width: 210px;
         height: 460px;
         padding-left: 38px;
+        margin-right: 20px;
         border-left: 1px solid #eaeaea;
         font-size: 12px;
         color: #666;
@@ -111,26 +127,26 @@
             font-size: 12px;
             color: #666;
         }
-        .hp-small,.hp-middle,.hp-big{
+        #hp-small,#hp-middle,#hp-big{
             text-align: center;
             img{
                 margin: 30px auto 10px;
                 display: block;
             }
         }
-        .hp-small{
+        #hp-small{
             img{
                 width: 40px;
                 height: 40px;
             }
         }
-        .hp-middle{
+        #hp-middle{
             img{
                 width: 60px;
                 height: 60px;
             }
         }
-        .hp-big{
+        #hp-big{
             img{
                 width: 100px;
                 height: 100px;
