--- a/source/widget/notice/notice.less
+++ b/source/widget/notice/notice.less
@@ -10,7 +10,7 @@
         .notice-nav{
             height: 700px;
             margin: 0;
-            padding-top: 15px;
+            padding: 15px 0 0 0;
             list-style: none;
             li{
                 width: 120px;
@@ -40,7 +40,7 @@
         float:right;
         width:920px;
         height: auto;
-        min-height: 680px;
+        min-height: 700px;
         overflow: hidden;
         background:#fff;
         border-radius:5px;
