--- a/source/widget/UM.all.order/all.order.css
+++ b/source/widget/UM.all.order/all.order.css
@@ -6,10 +6,11 @@
   display: inline-block;
   list-style: none;
   margin: 0;
+  padding: 0;
 }
 .ao-content .ao-list {
   height: 28px;
-  margin: 0 0 20px -13px;
+  margin: 0 0 20px -23px;
 }
 .ao-content .ao-list li {
   float: left;
@@ -155,7 +156,25 @@
   margin-bottom: 12px;
   padding: 0;
   border-radius: 3px;
+  font-family: "simsun";
   font-size: 14px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border-style: solid;
+  border-width: 0;
+  background-color: #3BAFDA;
+  border-color: #2392ba;
+  color: #FFFFFF;
+  transition: background-color 300ms ease-out;
+}
+.ao-content .some-order .ao-details ul li .ao-operation button:hover {
+  background-color: #2392ba;
+}
+.ao-content .some-order .ao-details ul li .ao-operation .alert {
+  background-color: #e74c3c;
+}
+.ao-content .some-order .ao-details ul li .ao-operation .alert:hover {
+  background-color: #bf2c1d;
 }
 .ao-content .some-order .ao-details ul .ao-li {
   margin-top: 20px;
