--- a/source/widget/UM.balance/balance.css
+++ b/source/widget/UM.balance/balance.css
@@ -4,36 +4,37 @@
  *table元素已经设定了BG和border-collapse属性
  */
 table {
-  max-width: 100%;
   border-collapse: collapse;
   border-spacing: 0;
 }
 .table {
   width: 100%;
-  margin-bottom: 20px;
   border: 1px solid #eaeaea;
 }
-.table th,
-.table td {
-  font-family: "Microsoft YaHei";
-  font-size: 16px;
-  color: #333;
-  background-color: #fff;
-  line-height: 28px;
+.table thead tr {
+  height: 50px;
+  background-color: #fcfcfc;
+}
+.table thead tr th {
   text-align: center;
   vertical-align: middle;
-  border-top: 1px dotted #eaeaea;
-}
-.table th {
   font-weight: normal;
   font-family: "SimSun";
   font-size: 12px;
   color: #666;
-  background-color: #fcfcfc;
   border-bottom: 1px solid #eaeaea;
 }
-.table td a {
-  color: #006699;
+.table tbody tr {
+  height: 50px;
+  background-color: #fff;
+}
+.table tbody tr td {
+  text-align: center;
+  vertical-align: middle;
+  font-size: 16px;
+  font-family: "Microsoft YaHei";
+  color: #333;
+  border-bottom: 1px solid #eaeaea;
 }
 /**
  * table with the solid border
@@ -44,96 +45,57 @@ table {
 .table-solid td {
   border: 1px solid #eaeaea;
 }
-.gift-card-record {
-  position: relative;
-}
-.gift-card-record .gcr-top-up {
-  float: right;
-  margin-bottom: 28px;
-  padding: 10px 28px;
-  font-size: 14px;
-  border-radius: 3px;
-}
-.gift-card-record .table.gcr-table {
-  margin-bottom: 40px;
-}
-.gift-card-record .table.gcr-table .gcr-used {
-  color: #999;
-}
-.gift-card-record .table.gcr-table .gcr-red {
-  color: #e74c3c;
-}
-.gift-card-record .table.gcr-table th,
-.gift-card-record .table.gcr-table td {
-  padding: 10px;
-}
-.gift-card-record img {
-  width: 75px;
-  height: 55px;
-  position: relative;
-  top: 6px;
-  left: 7px;
-}
-.gift-card-record .gcr-prompt-box {
-  background: #fff8eb;
-  border-radius: 5px;
-  padding: 10px 0 20px 20px;
-}
-.gift-card-record .gcr-prompt-box h3 {
-  font-size: 14px;
-  font-family: "Microsoft YaHei";
-  color: #666;
-  margin: 6px 0 6px 5px;
-}
-.gift-card-record .gcr-prompt-box p {
-  font-size: 12px;
-  margin: 0 0 0 5px;
-}
-.gift-card-record .gcr-prompt-box .gcr-prompt {
-  margin: 0 0 0 22px;
-  font-size: 12px;
-  color: #333;
-}
-.gift-card-record .gcr-prompt-box .gcr-prompt li {
-  line-height: 24px;
-}
-.gift-card-record span {
+.balance-record span {
   margin-right: 22px;
   font-family: "Microsoft YaHei";
   font-size: 14px;
   color: #333;
 }
-.gift-card-record span em {
+.balance-record span em {
   margin: 0 8px;
   font-size: 20px;
   font-style: normal;
   font-weight: bold;
   color: #e74c3c;
 }
-.gift-card-record .top-up-btn {
-  padding: 10px 28px;
-  font-size: 14px;
+.balance-record .balance-btn {
+  width: 100px;
+  height: 35px;
+  margin-bottom: 12px;
   border-radius: 3px;
+  font-size: 14px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border-style: solid;
+  border-width: 0;
+  background-color: #3BAFDA;
+  border-color: #2392ba;
+  color: #FFFFFF;
+  transition: background-color 300ms ease-out;
 }
-.gift-card-record ul {
+.balance-record .balance-btn:hover {
+  background-color: #2392ba;
+}
+.balance-record ul {
   margin: 5px 0 60px 0;
+  padding: 0;
   list-style: none;
 }
-.gift-card-record ul li {
+.balance-record ul li {
   float: left;
   width: 115px;
 }
-.gift-card-record ul li a {
+.balance-record ul li a {
   font-size: 13px;
   color: #333;
 }
-.gift-card-record ul .current a {
+.balance-record ul .current a {
   display: inline-block;
   height: 24px;
   color: #3bafda;
   font-weight: bold;
   border-bottom: 2px solid #3bafda;
 }
-.gift-card-record .contentbind .hidden {
+.balance-record .contentbind .br-hidden {
   display: none;
 }
