--- a/source/widget/UM.balance/balance.less
+++ b/source/widget/UM.balance/balance.less
@@ -1,6 +1,6 @@
 @import "table.less";
-@import "money.less";
-.gift-card-record{
+.balance-record{
+    padding: 15px 10px;
     span{
         margin-right: 22px;
         font-family: "Microsoft YaHei";
@@ -14,13 +14,14 @@
             color: #e74c3c;
         }
     }
-    .top-up-btn{
-        padding: 10px 28px;
-        font-size: 14px;
-        border-radius: 3px;
+    .balance-btn{
+       width: 100px;
+       margin-bottom: 12px;
+       font-size: 14px; 
     }
     ul{
         margin: 5px 0 60px 0;
+        padding: 0;
         list-style: none;
         li{
             float: left;
@@ -41,7 +42,7 @@
         }
     }
     .contentbind{
-        .hidden{
+        .br-hidden{
             display: none;
         }
     }
