--- a/source/widget/UM.card.activation/card.activation.css
+++ b/source/widget/UM.card.activation/card.activation.css
@@ -1,44 +1,3 @@
-input:not([type]),
-input[type="text"],
-input[type="password"],
-input[type="date"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="month"],
-input[type="week"],
-input[type="email"],
-input[type="number"],
-input[type="search"],
-input[type="tel"],
-input[type="time"],
-input[type="url"],
-input[type="color"],
-textarea {
-  border-style: solid;
-  border-width: 1px;
-  border-color: #cccccc;
-  box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.1);
-}
-input:not([type]):focus,
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="date"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-input[type="month"]:focus,
-input[type="week"]:focus,
-input[type="email"]:focus,
-input[type="number"]:focus,
-input[type="search"]:focus,
-input[type="tel"]:focus,
-input[type="time"]:focus,
-input[type="url"]:focus,
-input[type="color"]:focus,
-textarea:focus {
-  background: #fff;
-  border: 1px solid #3bafda;
-  outline: none;
-}
 span.error {
   display: block;
   width: 288px;
@@ -84,19 +43,35 @@ span.error {
   clear: both;
   width: 40px;
   margin-top: 8px;
-  font-size: 12px;
+  font-weight: normal;
   color: #666;
 }
 .ca-content .ca-content-right div input {
   width: 250px;
   margin: 0;
   padding: 8px 5px;
+  border: 1px solid #d2d2d2;
 }
-.ca-content .ca-content-right .btn_blue {
+.ca-content .ca-content-right div input:focus {
+  border: 1px solid #3bafda;
+}
+.ca-content .ca-content-right .btn-active {
   margin: 0px 30px 0 40px;
-  padding: 9px 35px;
-  font-size: 14px;
+  width: 100px;
+  height: 35px;
   border-radius: 3px;
+  font-size: 14px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border-style: solid;
+  border-width: 0;
+  background-color: #3BAFDA;
+  border-color: #2392ba;
+  color: #FFFFFF;
+  transition: background-color 300ms ease-out;
+}
+.ca-content .ca-content-right .btn-active:hover {
+  background-color: #2392ba;
 }
 .ca-content .ca-content-right a {
   font-size: 14px;
