--- a/source/widget/UM.certificate.binding/certificate.binding.less
+++ b/source/widget/UM.certificate.binding/certificate.binding.less
@@ -1,44 +1,3 @@
-input:not([type]),
-input[type="text"],
-input[type="password"],
-input[type="date"], 
-input[type="datetime"], 
-input[type="datetime-local"], 
-input[type="month"], 
-input[type="week"], 
-input[type="email"], 
-input[type="number"], 
-input[type="search"], 
-input[type="tel"], 
-input[type="time"], 
-input[type="url"], 
-input[type="color"], 
-textarea {
-   border-style: solid;
-   border-width: 1px;
-   border-color: #cccccc;
-   box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.1);
-}
-input:not([type]):focus,
-input[type="text"]:focus, 
-input[type="password"]:focus,
-input[type="date"]:focus, 
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus, 
-input[type="month"]:focus, 
-input[type="week"]:focus, 
-input[type="email"]:focus, 
-input[type="number"]:focus, 
-input[type="search"]:focus, 
-input[type="tel"]:focus,
-input[type="time"]:focus,
-input[type="url"]:focus,
-input[type="color"]:focus,
-textarea:focus {
-    background: #fff;
-    border:1px solid #3bafda;
-    outline: none; 
-}
 span.error{
     display: block;  
     width: 288px;
@@ -46,9 +5,6 @@ span.error{
     margin: 1px 0 0 30px;
     padding-top: 5px;
     line-height:19px; 
-    font-size: 12px;
-    font-style: normal;
-    background: #fff;
     color: #e74c3c;         
 }
 .cb-content{
@@ -70,28 +26,27 @@ span.error{
                 float: left;
                 width: 40px;
                 margin-top: 8px;
-                font-size: 12px;
                 color: #666;
+                font-weight: normal;
             }
             input{
                 width: 250px;
-                padding: 8px 5px;
                 margin: 0;
+                padding: 8px 5px;
+                border: 1px solid #d2d2d2;
+                &:focus {
+                    border:1px solid #3bafda;
+                }
             }
         }
-        .btn_blue{
+        .btn-bindcard{
             margin: 0px 30px 0 40px;
-            padding: 9px 35px;
-            font-size: 14px;
-            border-radius: 3px;
-        }
-        a{
-            font-size: 14px;
+            width: 100px;
+            font-size: 14px; 
         }
     }
 }
 .prompt-box{
-//    width: 1010px;
     margin: 0 auto;
     clear: both;
     img.prompt{
@@ -113,7 +68,6 @@ span.error{
             margin: 6px 0 6px 5px;
         }
         p{
-            font-size: 12px;
             margin: 0 0 0 5px;
             strong{
                 font-family: "Microsoft YaHei";
