--- a/source/widget/UM.money/money.css
+++ b/source/widget/UM.money/money.css
@@ -8,30 +8,32 @@ table {
 }
 .table {
   width: 100%;
-  margin-bottom: 20px;
   border: 1px solid #eaeaea;
 }
-.table th,
-.table td {
-  font-family: "Microsoft YaHei";
-  font-size: 16px;
-  color: #333;
-  background-color: #fff;
-  line-height: 28px;
+.table thead tr {
+  height: 50px;
+  background-color: #fcfcfc;
+}
+.table thead tr th {
   text-align: center;
   vertical-align: middle;
-  border-top: 1px dotted #eaeaea;
-}
-.table th {
   font-weight: normal;
   font-family: "SimSun";
   font-size: 12px;
   color: #666;
-  background-color: #fcfcfc;
   border-bottom: 1px solid #eaeaea;
 }
-.table td a {
-  color: #006699;
+.table tbody tr {
+  height: 50px;
+  background-color: #fff;
+}
+.table tbody tr td {
+  text-align: center;
+  vertical-align: middle;
+  font-size: 16px;
+  font-family: "Microsoft YaHei";
+  color: #333;
+  border-bottom: 1px solid #eaeaea;
 }
 /**
  * table with the solid border
@@ -48,9 +50,8 @@ table {
 .gift-card-record .gcr-top-up {
   float: right;
   margin-bottom: 28px;
-  padding: 10px 28px;
+  width: 100px;
   font-size: 14px;
-  border-radius: 3px;
 }
 .gift-card-record .table.gcr-table {
   margin-bottom: 40px;
@@ -60,10 +61,6 @@ table {
 }
 .gift-card-record .table.gcr-table .gcr-red {
   color: #e74c3c;
-}
-.gift-card-record .table.gcr-table th,
-.gift-card-record .table.gcr-table td {
-  padding: 10px;
 }
 .gift-card-record img {
   width: 75px;
@@ -75,7 +72,7 @@ table {
 .gift-card-record .gcr-prompt-box {
   background: #fff8eb;
   border-radius: 5px;
-  padding: 10px 0 20px 20px;
+  padding: 10px 0 10px 20px;
 }
 .gift-card-record .gcr-prompt-box h3 {
   font-size: 14px;
@@ -84,14 +81,13 @@ table {
   margin: 6px 0 6px 5px;
 }
 .gift-card-record .gcr-prompt-box p {
-  font-size: 12px;
   margin: 0 0 0 5px;
 }
 .gift-card-record .gcr-prompt-box .gcr-prompt {
-  margin: 0 0 0 22px;
-  font-size: 12px;
+  margin-left: 22px;
+  padding: 0;
   color: #333;
 }
 .gift-card-record .gcr-prompt-box .gcr-prompt li {
-  line-height: 24px;
+  line-height: 26px;
 }
