--- a/source/widget/UM.money/money.less
+++ b/source/widget/UM.money/money.less
@@ -4,9 +4,8 @@
     .gcr-top-up{
         float: right;
         margin-bottom: 28px;
-        padding: 10px 28px;
-        font-size: 14px;
-        border-radius: 3px;
+        width: 100px;
+        font-size: 14px; 
     } 
     .table.gcr-table{
         margin-bottom: 40px;
@@ -15,9 +14,6 @@
         }
         .gcr-red{
             color: #e74c3c;
-        }
-        th,td{
-            padding:10px;
         }
     }
     img{
@@ -30,7 +26,7 @@
     .gcr-prompt-box{
         background: #fff8eb;
         border-radius: 5px;
-        padding: 10px 0 20px 20px;
+        padding: 10px 0 10px 20px;
         h3{
             font-size: 14px;
             font-family: "Microsoft YaHei";
@@ -38,15 +34,14 @@
             margin: 6px 0 6px 5px;
         }
         p{
-            font-size: 12px;
             margin: 0 0 0 5px;
         }
         .gcr-prompt{
-            margin: 0 0 0 22px;
-            font-size: 12px;
+            margin-left: 22px;
+            padding: 0;
             color: #333;
             li{
-                line-height: 24px;
+                line-height: 26px;
             }
         }
     }
