--- a/source/widget/UM.order/table.less
+++ b/source/widget/UM.order/table.less
@@ -3,35 +3,40 @@
  *table元素已经设定了BG和border-collapse属性
  */
 table{
-    max-width:100%; 
     border-collapse: collapse;
     border-spacing: 0;
 }
 .table{
     width: 100%;
-    margin-bottom: 20px;
     border:1px solid #eaeaea;
-    th,
-    td{
-        font-family: "Microsoft YaHei";
-        font-size:16px;
-        color:#333;
-        background-color:#fff;
-        line-height:28px;
-        text-align:center;
-        vertical-align:middle;
-        border-top:1px dotted #eaeaea;
+    thead{
+        tr{
+            height: 50px;
+            background-color:#fcfcfc;
+            th{
+                text-align:center;
+                vertical-align:middle;
+                font-weight: normal;
+                font-family: "SimSun";
+                font-size: 12px;
+                color: #666;
+                border-bottom:1px solid #eaeaea;
+            }
+        }
     }
-    th{
-        font-weight: normal;
-        font-family: "SimSun";
-        font-size: 12px;
-        color: #666;
-        background-color:#fcfcfc;
-        border-bottom:1px solid #eaeaea;
-    }
-    td a{
-        color:#006699;
+    tbody{
+        tr{
+            height: 50px;
+            background-color:#fff;
+            td{
+                text-align:center;
+                vertical-align:middle;
+                font-size: 16px;
+                font-family: "Microsoft YaHei";
+                color:#333;
+                border-bottom:1px solid #eaeaea;
+            }
+        }
     }
 }
 
