--- a/source/widget/UM.password/password.css
+++ b/source/widget/UM.password/password.css
@@ -1,47 +1,7 @@
-input:not([type]),
-input[type="text"],
-input[type="password"],
-input[type="date"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="month"],
-input[type="week"],
-input[type="email"],
-input[type="number"],
-input[type="search"],
-input[type="tel"],
-input[type="time"],
-input[type="url"],
-input[type="color"],
-textarea {
-  border-style: solid;
-  border-width: 1px;
-  border-color: #cccccc;
-  box-shadow: inset 0 1px 2px rgba(255, 255, 255, 0.1);
-}
-input:not([type]):focus,
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="date"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-input[type="month"]:focus,
-input[type="week"]:focus,
-input[type="email"]:focus,
-input[type="number"]:focus,
-input[type="search"]:focus,
-input[type="tel"]:focus,
-input[type="time"]:focus,
-input[type="url"]:focus,
-input[type="color"]:focus,
-textarea:focus {
-  background: #fff;
-  border: 1px solid #3bafda;
-  outline: none;
-}
 .form-password {
   position: relative;
   width: 360px;
+  margin: 60px auto 0;
 }
 .form-password p {
   float: left;
@@ -58,36 +18,44 @@ textarea:focus {
   margin: 1px 0 0 65px;
   padding-top: 5px;
   line-height: 19px;
-  font-size: 12px;
-  font-style: normal;
-  background: #fff;
   color: #e74c3c;
 }
 .form-password label {
-  position: absolute;
-  left: 87px;
-  cursor: text;
-  font-size: 12px;
+  font-weight: normal;
   color: #999;
+  cursor: text;
 }
-.form-password .oldpass-tip {
+.form-password .curPwd-box,
+.form-password .newPwd-box,
+.form-password .confirmPwd-box {
+  position: relative;
+}
+.form-password .curPwd-box .curPwd-tip,
+.form-password .newPwd-box .curPwd-tip,
+.form-password .confirmPwd-box .curPwd-tip,
+.form-password .curPwd-box .newPwd-tip,
+.form-password .newPwd-box .newPwd-tip,
+.form-password .confirmPwd-box .newPwd-tip,
+.form-password .curPwd-box .confirmPwd-tip,
+.form-password .newPwd-box .confirmPwd-tip,
+.form-password .confirmPwd-box .confirmPwd-tip {
+  position: absolute;
   top: 9px;
-}
-.form-password .newpass-tip {
-  top: 78px;
-}
-.form-password .repass-tip {
-  top: 145px;
+  left: 90px;
 }
 .form-password input {
   width: 250px;
-  margin: 0;
   padding: 8px 5px;
+  vertical-align: middle;
+  border: 1px solid #d2d2d2;
+}
+.form-password input:focus {
+  border: 1px solid #3bafda;
 }
 .form-password .pass-strong {
   float: right;
   position: absolute;
-  top: 100px;
+  top: 32px;
   left: 175px;
   display: none;
   width: 150px;
@@ -125,8 +93,8 @@ textarea:focus {
   background-position: 0% -60px;
 }
 .form-password #form_submit {
+  width: 120px;
+  height: 35px;
   margin: 0px 30px 0 75px;
-  padding: 9px 35px;
   font-size: 14px;
-  border-radius: 3px;
 }
