--- a/source/widget/UM.third.bind/third.bind.css
+++ b/source/widget/UM.third.bind/third.bind.css
@@ -1,3 +1,6 @@
+.tb-content {
+  padding: 0 10px;
+}
 .tb-content p {
   font-family: "Microsoft YaHei";
   font-size: 14px;
@@ -5,7 +8,7 @@
 .tb-content ul {
   min-width: 440px;
   list-style: none;
-  margin: 0;
+  padding: 0;
 }
 .tb-content ul li {
   height: 60px;
@@ -19,23 +22,22 @@
   min-width: 115px;
   height: 45px;
   margin-left: 15px;
-  padding: 22px 0 0 50px;
+  padding: 15px 0 0 50px;
   font-size: 14px;
   color: #333;
   background: url("img/app-logo.png") no-repeat;
 }
-.tb-content ul li .btn-blue {
+.tb-content ul li .btn-info {
   float: right;
+  width: 100px;
   margin: 13px 20px 0 0;
-  padding: 9px 21px;
   font-size: 14px;
-  border-radius: 3px;
 }
 .tb-content ul li span {
   float: left;
   width: 10%;
   min-width: 50px;
-  margin-top: 23px;
+  margin-top: 20px;
 }
 .tb-content ul .unbounded span {
   font-size: 14px;
@@ -65,14 +67,14 @@
   color: #333;
 }
 .tb-content ul .app-qq h5 {
-  background-position: 0 6px;
+  background-position: 0 0;
 }
 .tb-content ul .app-weixin h5 {
-  background-position: 0 -72px;
+  background-position: 0 -78px;
 }
 .tb-content ul .app-weibo h5 {
-  background-position: 0 -151px;
+  background-position: 0 -158px;
 }
 .tb-content ul .app-jia h5 {
-  background-position: 0 -232px;
+  background-position: 0 -240px;
 }
