--- a/source/widget/UM.third.bind/third.bind.less
+++ b/source/widget/UM.third.bind/third.bind.less
@@ -1,4 +1,5 @@
 .tb-content{
+    padding: 0 10px;
     p{
         font-family: "Microsoft YaHei";
         font-size: 14px;
@@ -6,7 +7,7 @@
     ul{
         min-width: 440px;
         list-style: none;
-        margin: 0;
+        padding: 0;
         li{
             height: 60px;
             margin-bottom: 20px;
@@ -18,23 +19,22 @@
                 min-width: 115px;
                 height: 45px;
                 margin-left: 15px;
-                padding: 22px 0 0 50px;
+                padding: 15px 0 0 50px;
                 font-size: 14px;
                 color: #333;
                 background: url("img/app-logo.png") no-repeat;
             }
-            .btn-blue{
-                float: right;
+            .btn-info{
+                float: right;               
+                width: 100px;
                 margin: 13px 20px 0 0;
-                padding: 9px 21px;
-                font-size: 14px;
-                border-radius: 3px;
+                font-size: 14px; 
             }
             span{
                 float: left;
                 width: 10%;
                 min-width: 50px;
-                margin-top: 23px;
+                margin-top: 20px;
             }
         }
         .unbounded{
@@ -70,22 +70,22 @@
         }
         .app-qq{
             h5{
-                background-position: 0 6px;
+                background-position: 0 0;
             }
         }
         .app-weixin{
             h5{
-                background-position: 0 -72px;
+                background-position: 0 -78px;
             }
         }
         .app-weibo{
             h5{
-                background-position: 0 -151px;
+                background-position: 0 -158px;
             }
         }
         .app-jia{
             h5{
-                background-position: 0 -232px;
+                background-position: 0 -240px;
             }
         }
     }
