--- a/source/widget/errorQuestion/error_question.less
+++ b/source/widget/errorQuestion/error_question.less
@@ -80,14 +80,14 @@ div{
   }
   .que-body-hide{
     padding-right: 1rem;
-    background: url("../img/arrow_up.png") no-repeat right;
+    background: url("img/arrow_up.png") no-repeat right;
   }
   .que-body-show{
     cursor: pointer;
     width: 70px;
     padding-right: 1rem;
     margin-right: 2rem;
-    background: url("../img/arrow_down.png") no-repeat right;
+    background: url("img/arrow_down.png") no-repeat right;
   }
 }
 
@@ -327,7 +327,7 @@ div{
       display: inline-block;
       width: 2.2rem;
       height: 1.6rem;
-      background: url("../img/v1.png") no-repeat 0 0.1rem;
+      background: url("img/v1.png") no-repeat 0 0.1rem;
     }
     .erq-dis{
       color:rgb(37,153,196);
@@ -348,7 +348,7 @@ div{
       width: 2rem;
       height: 2rem;
       border-radius: 50%;
-      background: url("../img/sex-woman.png") no-repeat rgb(37,153,196) 45% 45%;
+      background: url("img/sex-woman.png") no-repeat rgb(37,153,196) 45% 45%;
     }
     .erq-level{
       .erq-level-left{
