更改首页样式

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -115,7 +115,7 @@ body{
 	height: auto;
 	margin-bottom: 20px;
 	overflow: hidden;
-	padding: 15px 5px 15px 15px;
+	padding: 15px 0px 15px 15px;
 	table,tr,th,thead{margin: 0;padding: 0;}
 	ul,li,p{margin: 0;list-style: none;padding: 0}
 	.left{float: left;}
@@ -142,17 +142,15 @@ body{
 	.courseList-body{
 		display: block;
 		overflow: hidden;
-		padding: 0 10px;
+		padding: 0 0px 0 10px;
 		.course-center{
-			min-width: 517px;
+			min-width: 587px;
 		}
 		.course-title{
 			font-size: 16px;
 			line-height: 18px;
 			margin-bottom: 8px;
-			.title-detail{
-				color: @dark333;
-			}
+			font-family: 'Microsoft YaHei';
 			.course_estimate{
 				color: @dark333;
 				font-size: 12px;
@@ -257,7 +255,7 @@ body{
 			padding: 12px;
 			overflow: hidden;
 			float: left;
-			width: 160px;
+			width: 170px;
 			.avatar-photo{
 				float: left;
 				margin-right: 10px;
