首页样式更改

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -74,6 +74,8 @@ body{
 	border-top-color: #e5e5e5;
 }
 .courseList-wrap{
+	clear: both;
+	overflow: hidden;
 	position: relative;
 	.course-btn-gray,.course-btn-gray[disabled]{
 		background: #ccd1d9;
