录播直播模块样式更改

--- a/source/widget/courses/courses.css
+++ b/source/widget/courses/courses.css
@@ -405,6 +405,7 @@ li {
   border: 1px solid #eaeaea;
   position: relative;
   overflow: visible;
+  background: #fcfcfc;
 }
 .course-small-list .label-course {
   width: 25px;
