--- a/source/widget/courses/courses.less
+++ b/source/widget/courses/courses.less
@@ -431,6 +431,7 @@ ul,li{list-style: none;}
 	border: 1px solid #eaeaea;
 	position: relative;
 	overflow: visible;
+	background: #fcfcfc;
 	.label-course{
 		width: 25px;
 		height: 47px;
