--- a/source/widget/personalCenter/personalCenter.css
+++ b/source/widget/personalCenter/personalCenter.css
@@ -3,14 +3,14 @@
   width: 100%;
   padding-top: 16px;
   height: 100%;
-  background: url('../img/background.png');
+  background: url('img/background.png');
   -moz-background-size: 100% 100%;
 }
 .centerHeader .centerHeader-background {
   width: 1190px;
   height: 300px;
   margin: 0 auto;
-  background: url('../img/header.jpg');
+  background: url('img/header.jpg');
 }
 .centerHeader .centerHeader-background .centerHeader-ib {
   width: 1190px;
@@ -29,7 +29,7 @@
   border: 5px solid rgba(255, 255, 255, 0.5);
   border-radius: 50%;
   position: relative;
-  background: url('../img/header-img.png');
+  background: url('img/header-img.png');
 }
 .centerHeader .centerHeader-background .centerHeader-img .centerHeader-img-head .centerHeader-img-level {
   position: absolute;
@@ -265,7 +265,7 @@
   margin-left: 14px;
   margin-top: 20px;
   border-right: 1px solid #d9d9d9;
-  background: url("../img/office-verify.png") no-repeat;
+  background: url("img/office-verify.png") no-repeat;
 }
 .center-verify-office .center-office-desc {
   float: left;
@@ -288,7 +288,7 @@
   margin-left: 14px;
   margin-top: 20px;
   border-right: 1px solid #d9d9d9;
-  background: url("../img/teacher-verify.png") no-repeat;
+  background: url("img/teacher-verify.png") no-repeat;
 }
 .center-verify-teacher .center-teacher-link {
   width: 135px;
@@ -298,7 +298,7 @@
   margin-top: 20px;
   width: 130px;
   color: #75bfee;
-  background: url("../img/teacher-movie.png") no-repeat 15px 5px;
+  background: url("img/teacher-movie.png") no-repeat 15px 5px;
 }
 .center-verify-teacher .center-teacher-desc {
   width: 260px;
@@ -312,7 +312,7 @@
   line-height: 54px;
   padding-left: 40px;
   color: #999999;
-  background: url("../img/school.png") no-repeat 15px 15px;
+  background: url("img/school.png") no-repeat 15px 15px;
 }
 .center-verify-stud {
   width: 260px;
@@ -327,7 +327,7 @@
   margin-left: 14px;
   margin-top: 20px;
   border-right: 1px solid #d9d9d9;
-  background: url("../img/stud-verify.png") no-repeat;
+  background: url("img/stud-verify.png") no-repeat;
 }
 .center-verify-stud .center-stud-desc {
   width: 135px;
@@ -425,15 +425,15 @@
 }
 .center-rank-flower .flower1 {
   padding-left: 25px;
-  background: url("../img/flower1.png") no-repeat 0 10px;
+  background: url("img/flower1.png") no-repeat 0 10px;
 }
 .center-rank-flower .flower2 {
   padding-left: 20px;
-  background: url("../img/flower2.png") no-repeat 0 10px;
+  background: url("img/flower2.png") no-repeat 0 10px;
 }
 .center-rank-flower .flower3 {
   padding-left: 20px;
-  background: url("../img/flower3.png") no-repeat 0 15px;
+  background: url("img/flower3.png") no-repeat 0 15px;
 }
 .center-rank-flower .rank-info {
   float: left;
@@ -508,7 +508,7 @@
   color: #333333;
   display: inline-block;
   padding-left: 25px;
-  background: url("../img/flower1.png") no-repeat 0 18px;
+  background: url("img/flower1.png") no-repeat 0 18px;
 }
 .center-rank-alive .center-rank-stud .send-flower .send-flower2 {
   font-size: 14px;
@@ -516,7 +516,7 @@
   display: inline-block;
   color: #333333;
   padding-left: 20px;
-  background: url("../img/flower2.png") no-repeat 0 18px;
+  background: url("img/flower2.png") no-repeat 0 18px;
 }
 .center-rank-alive .center-rank-stud .send-flower .send-flower3 {
   font-size: 14px;
@@ -524,7 +524,7 @@
   display: inline-block;
   color: #333333;
   padding-left: 20px;
-  background: url("../img/flower3.png") no-repeat 0 22px;
+  background: url("img/flower3.png") no-repeat 0 22px;
 }
 .center-rank-alive .center-rank-stud .rank-from {
   font-size: 12px;
