--- a/source/widget/personalCenter/personalCenter.less
+++ b/source/widget/personalCenter/personalCenter.less
@@ -4,13 +4,13 @@
   width: 100%;
   padding-top:16px;
   height: 100%;
-  background: url('../img/background.png');
+  background: url('img/background.png');
   -moz-background-size: 100% 100%;
   .centerHeader-background{
     width: 1190px;
     height: 300px;
     margin: 0 auto;
-    background: url('../img/header.jpg');
+    background: url('img/header.jpg');
     .centerHeader-ib{
       width: 1190px;
       height: 300px;
@@ -27,7 +27,7 @@
         border: 5px solid rgba(255,255,255,0.5);
         border-radius: 50%;
         position: relative;
-        background: url('../img/header-img.png');
+        background: url('img/header-img.png');
         .centerHeader-img-level{
           position: absolute;
           width: 22px;
@@ -219,7 +219,7 @@
   .center-office-verify{
     float: left;
     .verify-up-left;
-    background: url("../img/office-verify.png") no-repeat;
+    background: url("img/office-verify.png") no-repeat;
   }
   .center-office-desc{
     float: left;
@@ -233,13 +233,13 @@
   font-size: 12px;
   .center-teacher-verify{
     .verify-up-left;
-    background: url("../img/teacher-verify.png") no-repeat;
+    background: url("img/teacher-verify.png") no-repeat;
   }
   .center-teacher-link{
     .verify-up-right;
     width: 130px;
     color:rgb(117,191,238);
-    background: url("../img/teacher-movie.png") no-repeat 15px 5px;
+    background: url("img/teacher-movie.png") no-repeat 15px 5px;
   }
   .center-teacher-desc{
     width: 260px;
@@ -253,7 +253,7 @@
     line-height:54px;
     padding-left: 40px;
     color:rgb(153,153,153);
-    background: url("../img/school.png") no-repeat 15px 15px;
+    background: url("img/school.png") no-repeat 15px 15px;
   }
 }
 .center-verify-stud{
@@ -262,7 +262,7 @@
   font-size: 12px;
   .center-stud-verify{
     .verify-up-left;
-    background: url("../img/stud-verify.png") no-repeat;
+    background: url("img/stud-verify.png") no-repeat;
   }
   .center-stud-desc{
     .verify-up-right;
@@ -352,15 +352,15 @@
   }
   .flower1{
     padding-left: 25px;
-    background: url("../img/flower1.png") no-repeat 0 10px;
+    background: url("img/flower1.png") no-repeat 0 10px;
   }
   .flower2{
     padding-left: 20px;
-    background: url("../img/flower2.png") no-repeat 0 10px;
+    background: url("img/flower2.png") no-repeat 0 10px;
   }
   .flower3{
     padding-left: 20px;
-    background: url("../img/flower3.png") no-repeat 0 15px;
+    background: url("img/flower3.png") no-repeat 0 15px;
   }
   .rank-info{
     float:left;
@@ -435,7 +435,7 @@
         color: rgb(51,51,51);
         display: inline-block;
         padding-left: 25px;
-        background: url("../img/flower1.png") no-repeat 0 18px;
+        background: url("img/flower1.png") no-repeat 0 18px;
       }
       .send-flower2{
         font-size: 14px;
@@ -443,7 +443,7 @@
         display: inline-block;
         color: rgb(51,51,51);
         padding-left: 20px;
-        background: url("../img/flower2.png") no-repeat 0 18px;
+        background: url("img/flower2.png") no-repeat 0 18px;
       }
       .send-flower3{
         font-size: 14px;
@@ -451,7 +451,7 @@
         display: inline-block;
         color: rgb(51,51,51);
         padding-left: 20px;
-        background: url("../img/flower3.png") no-repeat 0 22px;
+        background: url("img/flower3.png") no-repeat 0 22px;
       }
     }
     .rank-from{
