完善信息样式更改

--- a/source/widget/perfect-information/perfect-information.less
+++ b/source/widget/perfect-information/perfect-information.less
@@ -118,7 +118,7 @@ body{
 				position: absolute;
 				top: 0;
 				width: auto;
-				left: 9px;
+				left: 10px;
 				color: #ccc;
 			}
 			.input-text {
@@ -128,6 +128,8 @@ body{
 				margin-bottom: 0;
 				box-shadow: none;
 				color: #333;
+				display: block;
+				padding-left: 10px;
 			}
 			.errTips {
 				color: #cc0000;
