--- a/source/widget/perfect-information/perfect-information.css
+++ b/source/widget/perfect-information/perfect-information.css
@@ -124,7 +124,7 @@ body {
   position: absolute;
   top: 0;
   width: auto;
-  left: 9px;
+  left: 10px;
   color: #ccc;
 }
 .setting-infor .f1 p .input-text {
@@ -134,6 +134,8 @@ body {
   margin-bottom: 0;
   box-shadow: none;
   color: #333;
+  display: block;
+  padding-left: 10px;
 }
 .setting-infor .f1 p .errTips {
   color: #cc0000;
