--- a/source/widget/gold/gold.less
+++ b/source/widget/gold/gold.less
@@ -41,7 +41,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-store-card-price em{margin-left: 10px;font-size: 16px;color: #e74c3c;}
 .gold-store-card-level{float: right;height: 24px;line-height: 26px;}
 .gold-store-card-level em{margin-left: 10px;font-weight: bold;color: #333;}
-.gold-store-card p{width: 200px;font-size: 12px;color: #333;margin: 12px auto;}
+.gold-store-card p{width: 200px;font-size: 12px;color: #333;margin: 12px auto;line-height: 18px;}
 .gold-store-card-exchange,.gold-store-present-exchange{width: 100px;height: 34px;background-color: #e74c3c;margin: 28px auto;text-align: center;font-size: 14px;line-height: 34px;color: #fff;border-radius: 3px;cursor: pointer;}
 .gold-store-present-rank,.gold-exchange-rank{width: 924px;height: 52px;margin-top: 10px;margin-left: 5px;font-size: 14px;background-color: #fff;border-radius: 5px;overflow: hidden;}
 .gold-store-present-rank-by,.gold-exchange-rank-by{line-height: 52px;margin-left: 22px;color: #999;cursor: pointer;}
